Update and rename graphics and data export.qmd to 03_graphics and data export.qmd

--- a/03_graphics and data export.qmd
+++ b/03_graphics and data export.qmd
@@ -1,5 +1,5 @@
 ---
-title: "graphics and data export"
+title: "03_graphics and data export"
 format: html
 ---
 ## 1. Load Extended Data and Cost Rasters
