--- a/01_DFcleaning.qmd
+++ b/01_DFcleaning.qmd
@@ -5,22 +5,26 @@ format: html
 
 ```{r}
 # Read and filter categories
-df <- read.csv("TB.csv", sep=";", dec=",", stringsAsFactors = FALSE)
-idx <- grepl("^(I|II|III)(-|$)", df$categoria)
+df <- read.csv("TB_en.csv", sep=";", dec=",", stringsAsFactors = FALSE)
+
+# Keep only rows whose 'category' begins with I, II or III
+idx <- grepl("^(I|II|III)(-|$)", df$category)
 df2 <- df[idx, ]
-df2$cat_pref <- sub("-.*", "", df2$categoria)
 
-# Clean and convert coordinates
-df2$longitud <- as.numeric(ifelse(df2$longitud == "", NA, df2$longitud))
-df2$latitud  <- as.numeric(ifelse(df2$latitud  == "", NA, df2$latitud))
-df2 <- df2[complete.cases(df2[, c("latitud", "longitud")]), ]
+# Extract the prefix (I, II, or III) before any dash
+df2$cat_pref <- sub("-.*", "", df2$category)
 
-# Create three base‐R data.frames by category
-df_I   <- df2[df2$cat_pref == "I",   c("latitud", "longitud")]
-df_II  <- df2[df2$cat_pref == "II",  c("latitud", "longitud")]
-df_III <- df2[df2$cat_pref == "III", c("latitud", "longitud")]
+# Clean and convert coordinate columns
+df2$longitude <- as.numeric(ifelse(df2$longitude == "", NA, df2$longitude))
+df2$latitude  <- as.numeric(ifelse(df2$latitude  == "", NA, df2$latitude))
+df2 <- df2[complete.cases(df2[, c("latitude", "longitude")]), ]
 
-# Save to CSV files
+# Split into three data.frames by category prefix
+df_I   <- df2[df2$cat_pref == "I",   c("latitude", "longitude")]
+df_II  <- df2[df2$cat_pref == "II",  c("latitude", "longitude")]
+df_III <- df2[df2$cat_pref == "III", c("latitude", "longitude")]
+
+# Write out the three coordinate files
 write.csv(df_I,   "coords_I.csv",   row.names = FALSE)
 write.csv(df_II,  "coords_II.csv",  row.names = FALSE)
 write.csv(df_III, "coords_III.csv", row.names = FALSE)
